src/test/ui/error-codes/E0045.stderr
error[E0045]: variadic function must have C or cdecl calling convention
  --> $DIR/E0045.rs:11:17
   |
LL | extern "Rust" { fn foo(x: u8, ...); }   //~ ERROR E0045
   |                 ^^^^^^^^^^^^^^^^^^^ variadics require C or cdecl calling convention

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0045"
